--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,6 +34,7 @@ subjects:
 - !lcsh 'Ranches -- Juvenile fiction'
 - !lcsh 'Colorado -- Juvenile fiction'
 - !lcsh 'Western stories'
+- GITenberg
 title: 'The Boys of Crawford''s Basin
 
   The Story of a Mountain Ranch in the Early Days of Colorado'
